[gd_scene load_steps=9 format=2]

[ext_resource path="res://Box/Box_4.png" type="Texture" id=1]
[ext_resource path="res://Box/box.gd" type="Script" id=2]
[ext_resource path="res://Box/Box_2.png" type="Texture" id=3]
[ext_resource path="res://Box/Box_1.png" type="Texture" id=4]
[ext_resource path="res://Box/Box_3.png" type="Texture" id=5]
[ext_resource path="res://Box/Trail.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 24 )

[sub_resource type="CircleShape2D" id=2]
radius = 65.0

[node name="Box" type="RigidBody2D" groups=["Kickable"]]
collision_layer = 8
collision_mask = 10
mass = 2.0
gravity_scale = 10.0
continuous_cd = 2
contacts_reported = 1
contact_monitor = true
can_sleep = false
script = ExtResource( 2 )

[node name="Trail" parent="." instance=ExtResource( 6 )]
target_path = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="1" type="Sprite" parent="."]
visible = false
position = Vector2( 1.43051e-06, 4.76837e-07 )
scale = Vector2( 4.8, 4.8 )
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 18, 18 )

[node name="2" type="Sprite" parent="."]
visible = false
position = Vector2( -2.38419e-07, 9.53674e-07 )
scale = Vector2( 4.8, 4.8 )
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 18, 18 )

[node name="3" type="Sprite" parent="."]
visible = false
position = Vector2( -2.38419e-07, 9.53674e-07 )
scale = Vector2( 4.8, 4.8 )
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 18, 18 )

[node name="4" type="Sprite" parent="."]
visible = false
position = Vector2( -2.38419e-07, 9.53674e-07 )
scale = Vector2( 4.8, 4.8 )
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 18, 18 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_Box_body_entered"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
